--- a/index.html
+++ b/index.html
@@ -120,3 +120,4 @@ Cooking with creativity is a great way to bring a new level of excitement and en
 <p>
 So don't be afraid to get creative in the kitchen! Try out new recipes, experiment with new ingredients and spices, and have fun with your cooking. Who knows, you may just discover your new favorite dish!
 </p>
+<center>Credit : <a href="https://tastymaderecipes.blogspot.com/" rel="dofollow">https://www.tastymaderecipes.blogspot.com/</a>
