--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <h1>Delicious Recipe Ideas</h1>
-<h2>Introduction</h2>
+
+<p><h2>Introduction</h2></p>
 <p>
   Are you in need of some inspiration for meal planning? Look no further! This article is all about delicious recipe ideas that are sure to please the whole family. From yummy dinner ideas to tasty meals for every day, we've got you covered. Keep reading to find out more about these creative and unique recipe ideas that are both healthy and indulgent.
 </p>
