--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </p>
 <h3>Teriyaki Chicken Stir-Fry</h3>
 <p>
-  <img src="https://tse1.mm.bing.net/th?q=Teriyaki Chicken Stir-Fry" alt="Teriyaki Chicken Stir-Fry" />
-  This quick and easy dish is a classic favorite. Simply stir-fry sliced chicken breasts with your favorite vegetables and season with a delicious teriyaki sauce. Serve over a bed of rice for a complete meal.
+  <img src="https://tse1.mm.bing.net/th?q=Teriyaki Chicken Stir-Fry" alt="Teriyaki Chicken Stir-Fry" /></p>
+<p>This quick and easy dish is a classic favorite. Simply stir-fry sliced chicken breasts with your favorite vegetables and season with a delicious teriyaki sauce. Serve over a bed of rice for a complete meal.
 </p>
 <h3>Baked Salmon with Lemon and Herb</h3>
 <p>
@@ -20,8 +20,8 @@
 </p>
 <h3>Lasagna Roll-Ups</h3>
 <p>
-  <img src="https://tse1.mm.bing.net/th?q=Lasagna Roll-Ups" alt="Lasagna Roll-Ups" />
-  These fun and creative lasagna roll-ups are a twist on a classic favorite. Fill cooked lasagna noodles with a delicious ricotta and meat filling, then roll up and bake until bubbly and golden. Serve with a side salad for a complete meal.
+  <img src="https://tse1.mm.bing.net/th?q=Lasagna Roll-Ups" alt="Lasagna Roll-Ups" /></p>
+<p>These fun and creative lasagna roll-ups are a twist on a classic favorite. Fill cooked lasagna noodles with a delicious ricotta and meat filling, then roll up and bake until bubbly and golden. Serve with a side salad for a complete meal.
 </p>
 <h2>Tasty Meal Ideas for Every Day</h2>
 <p>
@@ -29,18 +29,18 @@
 </p>
 <h3>One-Pot Pasta</h3>
 <p>
-  <img src="https://tse1.mm.bing.net/th?q=One-Pot Pasta" alt="One-Pot Pasta" />
-  This one-pot pasta dish is a lifesaver on busy weeknights. Simply cook pasta, vegetables, and your favorite sauce all in one pot for a quick and easy meal. Top with grated cheese and fresh herbs for a touch of flavor.
+  <img src="https://tse1.mm.bing.net/th?q=One-Pot Pasta" alt="One-Pot Pasta" /></p>
+<p>This one-pot pasta dish is a lifesaver on busy weeknights. Simply cook pasta, vegetables, and your favorite sauce all in one pot for a quick and easy meal. Top with grated cheese and fresh herbs for a touch of flavor.
 </p>
 <h3>Crispy Baked Chicken Tenders</h3>
 <p>
-  <img src="https://tse1.mm.bing.net/th?q=Crispy Baked Chicken Tenders" alt="Crispy Baked Chicken Tenders" />
-  These crispy baked chicken tenders are a healthier alternative to fried chicken. Simply coat chicken strips in seasoned breadcrumbs and bake in the oven until golden and crispy. Serve with your favorite dipping sauce and a side of vegetables for a complete meal.
+  <img src="https://tse1.mm.bing.net/th?q=Crispy Baked Chicken Tenders" alt="Crispy Baked Chicken Tenders" /></p>
+<p>These crispy baked chicken tenders are a healthier alternative to fried chicken. Simply coat chicken strips in seasoned breadcrumbs and bake in the oven until golden and crispy. Serve with your favorite dipping sauce and a side of vegetables for a complete meal.
 </p>
 <h3>Slow Cooker Beef Stew</h3>
 <p>
-  <img src="https://tse1.mm.bing.net/th?q=Slow Cooker Beef Stew" alt="Slow Cooker Beef Stew" />
-  This slow cooker beef stew is a perfect meal for those cold, winter days. Simply toss beef, vegetables, and your favorite seasonings into a slow cooker and let it cook all day for a warm and comforting meal. Serve with crusty bread for a complete meal.
+  <img src="https://tse1.mm.bing.net/th?q=Slow Cooker Beef Stew" alt="Slow Cooker Beef Stew" /></p>
+<p>This slow cooker beef stew is a perfect meal for those cold, winter days. Simply toss beef, vegetables, and your favorite seasonings into a slow cooker and let it cook all day for a warm and comforting meal. Serve with crusty bread for a complete meal.
 </p>
 <h2>Tips and Tricks for Making Delicious Recipes</h2>
 <p>
@@ -48,18 +48,18 @@
 </p>
 <h3>Experiment with Spices and Herbs</h3>
 <p>
-  <img src="https://tse1.mm.bing.net/th?q=Experiment with Spices and Herbs" alt="Experiment with Spices and Herbs" />
-  Don't be afraid to experiment with spices and herbs in your cooking. A simple sprinkle of dried herbs or a dash of spices can take a plain dish to the next level. Try out different combinations and find what works best for you.
+  <img src="https://tse1.mm.bing.net/th?q=Experiment with Spices and Herbs" alt="Experiment with Spices and Herbs" /></p>
+<p>Don't be afraid to experiment with spices and herbs in your cooking. A simple sprinkle of dried herbs or a dash of spices can take a plain dish to the next level. Try out different combinations and find what works best for you.
 </p>
 <h3>Use Fresh Ingredients</h3>
 <p>
-  <img src="https://tse1.mm.bing.net/th?q=Use Fresh Ingredients" alt="Use Fresh Ingredients" />
-  Using fresh ingredients can make a big difference in the taste of your meals. Opt for seasonal produce and look for high-quality ingredients that are ripe and ready to use.
+  <img src="https://tse1.mm.bing.net/th?q=Use Fresh Ingredients" alt="Use Fresh Ingredients" /></p>
+<p>Using fresh ingredients can make a big difference in the taste of your meals. Opt for seasonal produce and look for high-quality ingredients that are ripe and ready to use.
 </p>
 <h3>Add a Little Bit of Indulgence</h3>
 <p>
-  <img src="https://tse1.mm.bing.net/th?q=Add a Little Bit of Indulgence" alt="Add a Little Bit of Indulgence" />
-  Don't be afraid to add a little bit of indulgence to your recipes. Whether it's a rich cream sauce or a sprinkling of cheesy goodness, adding a touch of decadence can make your meals even more delicious.
+  <img src="https://tse1.mm.bing.net/th?q=Add a Little Bit of Indulgence" alt="Add a Little Bit of Indulgence" /></p>
+<p>Don't be afraid to add a little bit of indulgence to your recipes. Whether it's a rich cream sauce or a sprinkling of cheesy goodness, adding a touch of decadence can make your meals even more delicious.
 </p>
 <h2>Example of a Delicious Recipe</h2>
 <p>
@@ -67,8 +67,8 @@
 </p>
 <h3>Spaghetti Carbonara</h3>
 <p>
-  <img src="https://tse1.mm.bing.net/th?q=Spaghetti Carbonara" alt="Spaghetti Carbonara" />
-  This creamy and indulgent spaghetti carbonara is a crowd-pleaser. Simply cook spaghetti and set aside. In a separate pan, cook bacon until crispy, then whisk together eggs, grated cheese, and black pepper. Toss with the spaghetti and bacon for a quick and easy meal.
+  <img src="https://tse1.mm.bing.net/th?q=Spaghetti Carbonara" alt="Spaghetti Carbonara" /></p>
+<p>This creamy and indulgent spaghetti carbonara is a crowd-pleaser. Simply cook spaghetti and set aside. In a separate pan, cook bacon until crispy, then whisk together eggs, grated cheese, and black pepper. Toss with the spaghetti and bacon for a quick and easy meal.
 </p>
   
-<center>Credit : <a href="https://tastymaderecipes.blogspot.com/" rel="dofollow">https://www.tastymaderecipes.blogspot.com/</a>
+<p><center>Credit : <a href="https://tastymaderecipes.blogspot.com/" rel="dofollow">https://www.tastymaderecipes.blogspot.com/</a></p>
