--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </p>
 <h3>Baked Salmon with Lemon and Herb</h3>
 <p>
-  <img src="https://tse1.mm.bing.net/th?q=Baked Salmon with Lemon and Herb" alt="Baked Salmon with Lemon and Herb" />
-  This healthy and flavorful salmon dish is a great option for a special occasion or a weeknight dinner. Simply season salmon fillets with lemon, herbs, and your favorite spices, then bake in the oven until flaky and tender. Serve with a side of vegetables and a crusty bread for a complete meal.
+  <img src="https://tse1.mm.bing.net/th?q=Baked Salmon with Lemon and Herb" alt="Baked Salmon with Lemon and Herb" /></p>
+<p>This healthy and flavorful salmon dish is a great option for a special occasion or a weeknight dinner. Simply season salmon fillets with lemon, herbs, and your favorite spices, then bake in the oven until flaky and tender. Serve with a side of vegetables and a crusty bread for a complete meal.
 </p>
 <h3>Lasagna Roll-Ups</h3>
 <p>
